export interface Component {
    operation(): void;
}
